2010-05-04	Olivier Bilodeau <obilodeau@inverse.ca>
	* pf/conf/ui.conf: Renamed VLAN to Alternate dest. VLAN makes its
	purpose clearer. Fixes #927;
	http://www.packetfence.org/mantis/view.php?id=927

	* pf/docs/PacketFence_Administration_Guide.odt: Added two paragraph to
	the admin guide under MySQL optimizations: 
	- Avoid 'Too many connections' problems
	- Avoid 'Host <hostname> is blocked' problems
	Fixes #951;
	http://www.packetfence.org/mantis/view.php?id=951

	* pf/html/admin/configuration/switches_add.php, 
	pf/html/admin/configuration/switches_edit.php: VoIPEnabled parameter
	is now a Yes/No dropdown instead of an input text. Fixes #952;
	Also took the opportunity to turn the whole thing into a switch/case
	http://www.packetfence.org/mantis/view.php?id=952

	* pf/bin/pfcmd: Not saying 'Command not understood' anymore if no 
	command was passed to pfcmd. Fixes #972;
	http://www.packetfence.org/mantis/view.php?id=972

	* pf/TODO: dropping TODO in favor of tracking everything in our
	public bugtracker

	* pf/installer.pl, pf/t/pfcmd.t: New 1.9.0 database hashes

	* pf/bin/pfcmd: Now ignoring AUTO_INCREMENT= when calculating database
	hash since this value will always be different for each database.

	* pf/docs/PacketFence_Developers_Guide.odt, 
	pf/docs/PacketFence_Installation_Guide.odt: Mark x86_64 as officially
	supported

2010-05-03	Olivier Bilodeau <obilodeau@inverse.ca>
	* pf/docs/PacketFence_Administration_Guide.odt: Manual merge of 1.8 
	and trunk branches. Added small fixes on top of that (whitespace and
	wording)
	- Small corrections. Fixes #950;
	http://www.packetfence.org/mantis/view.php?id=950

2010-04-30	Olivier Bilodeau <obilodeau@inverse.ca>
	* pf/lib/pf/vlan.pm: VLAN assignment sample for node categorization.
	Changed the custom_getCorrectVlan interface again.

2010-04-28	Olivier Bilodeau <obilodeau@inverse.ca>
	* pf/html/admin/common/helpers.inc, pf/html/admin/images/category.png,
	pf/html/admin/node/categories_add.php, 